wrapper.gradleVersion = '6.3'

subprojects {
    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'maven'
    apply plugin: 'jacoco'
  
    group = 'edu.kit.ifv.mobitopp'
    version = project.hasProperty('next_version') ? project.property('next_version') : '0.0-SNAPSHOT'
    
    sourceCompatibility = 1.12
    targetCompatibility = 1.12
    
    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
        maven { url "http://mvn.collide.info/content/repositories/releases/" }
        maven { url "https://jitpack.io" }
    }
    
    ext.versions = [
        junit: '5.6.0',
        mockito: '3.0.0'
    ]
    
    ext.libraries = [
        actitopp: 'edu.kit.ifv.mobitopp:actitopp:0.1',
        commons_compress: 'org.apache.commons:commons-compress:1.12',
        lombok: 'org.projectlombok:lombok:1.18.8',
        opencsv: 'net.sf.opencsv:opencsv:2.3',
        snakeyaml: 'org.yaml:snakeyaml:1.18',

        assertj: 'org.assertj:assertj-core:3.13.2',
        equalsverifier: 'nl.jqno.equalsverifier:equalsverifier:3.1.10',
        hamcrest_all: 'org.hamcrest:hamcrest-all:1.3',
        hamcrest_optional: 'com.github.npathai:hamcrest-optional:1.0',
        junit_jupiter: 'org.junit.jupiter:junit-jupiter:' + versions.junit,
        junit_migrationsupport: 'org.junit.jupiter:junit-jupiter-migrationsupport:' + versions.junit,
        junit_vintage: 'org.junit.vintage:junit-vintage-engine:' + versions.junit,
        mockito_core: 'org.mockito:mockito-core:' + versions.mockito,
        mockito_junit_jupiter: 'org.mockito:mockito-junit-jupiter:' + versions.mockito
    ]
    
    configurations.all {
        exclude group: 'xerces', module: 'xerces'
        resolutionStrategy {
          //failOnVersionConflict()
        }
    }
    
    eclipse.classpath {
        downloadSources=true
    }
}
